# ros-ant-colony-game

./: README.md
antcolony_client/: CMakeLists.txt  package.xml
antcolony_client/scripts/: antcolony_client.py
antcolony_msgs/: CMakeLists.txt  package.xml
antcolony_msgs/msg/: Action.msg  Ant.msg  Hive.msg  Order.msg  Player.msg  State.msg  Sugar.msg
antcolony_msgs/srv/: Play.srv  Register.srv
antcolony_server/: CMakeLists.txt  package.xml
antcolony_server/include/antcolony_server/: antcolony_server.h
antcolony_server/launch/: game.launch
antcolony_server/msg/: Move.msg
antcolony_server/scripts/: console_map_viewer.py
antcolony_server/src/: antcolony_server_node.cpp
documentation/: Rules_Of_Game.md
